--- a/LVLSample/src/main/res/layout/main.xml
+++ b/LVLSample/src/main/res/layout/main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2010 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2010 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -14,21 +13,78 @@
      limitations under the License.
 -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    >
-<TextView
-    android:id="@+id/status_text"
-    android:layout_width="fill_parent"
-    android:layout_height="0dip"
-    android:layout_weight="1"
-    />
-<Button
-    android:id="@+id/check_license_button"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:text="@string/check_license"
-    />
-</LinearLayout>
+    android:orientation="vertical"
+    android:weightSum="2">
 
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="128sp"
+            android:text="@string/v1"
+            android:layout_gravity="center"
+            android:textColor="#88888888" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/status_text"
+                android:layout_width="fill_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/check_license_button"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/check_license" />
+        </LinearLayout>
+    </FrameLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="?android:attr/listDivider" />
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="128sp"
+            android:text="@string/v2"
+            android:layout_gravity="center"
+            android:textColor="#88888888" />
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/status_text_2"
+                android:layout_width="fill_parent"
+                android:layout_height="0dip"
+                android:layout_weight="1" />
+
+            <Button
+                android:id="@+id/check_license_button_2"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/check_license" />
+        </LinearLayout>
+
+    </FrameLayout>
+</LinearLayout>
